--- a/cohorts/2024/04-deployment/homework/starter.ipynb
+++ b/cohorts/2024/04-deployment/homework/starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "2c51efaa",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "4acf73a0-51b5-4663-9bb8-8eb947863e17",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.10.13\n"
+      "Python 3.11.8\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "0ef880a0",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "7836ccfd",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "41c08294",
    "metadata": {},
    "outputs": [],
@@ -82,17 +82,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4854399a",
+   "execution_count": 31,
+   "id": "6d8c7b5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = read_data('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_????-??.parquet')"
+    "year = 2023\n",
+    "month = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "4854399a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = read_data(f'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_{year:04d}-{month:02d}.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "669fda0a",
    "metadata": {},
    "outputs": [],
@@ -104,8 +115,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "bf532ae7-1897-428c-ba0c-875ccaf7d76c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['ride_id'] = f'{year:04d}/{month:02d}_' + df.index.astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5ed48a11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result = df[['ride_id']].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "113b78fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ride_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023/03_0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023/03_1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023/03_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023/03_3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023/03_4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3403761</th>\n",
+       "      <td>2023/03_3403761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3403762</th>\n",
+       "      <td>2023/03_3403762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3403763</th>\n",
+       "      <td>2023/03_3403763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3403764</th>\n",
+       "      <td>2023/03_3403764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3403765</th>\n",
+       "      <td>2023/03_3403765</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3316216 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ride_id\n",
+       "0              2023/03_0\n",
+       "1              2023/03_1\n",
+       "2              2023/03_2\n",
+       "3              2023/03_3\n",
+       "4              2023/03_4\n",
+       "...                  ...\n",
+       "3403761  2023/03_3403761\n",
+       "3403762  2023/03_3403762\n",
+       "3403763  2023/03_3403763\n",
+       "3403764  2023/03_3403764\n",
+       "3403765  2023/03_3403765\n",
+       "\n",
+       "[3316216 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ca97d0b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result['predictions'] = y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b8a0bea1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = f'yellow_tripdata_{year:04d}-{month:02d}.parquet'\n",
+    "df_result.to_parquet(\n",
+    "    output_file,\n",
+    "    engine='pyarrow',\n",
+    "    compression=None,\n",
+    "    index=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ece61870",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -127,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
